CloudConsultingSalesforce/force-app/main/default/objects/Project_Staff__c/Project_Staff__c.object-meta.xml
<CustomObject>
    <label>Project Staff</label>
    <nameField>
        <label>Project Staff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects Staff</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>