CloudConsultingSalesforce/force-app/main/default/objects/Project_Staff__c/fields/Amount_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Hours__c</fullName>
    <label>Amount of Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>