CloudConsultingSalesforce/force-app/main/default/objects/Project_Staff__c/fields/Hours_Covered__c.field-meta.xml
<CustomField>
    <fullName>Hours_Covered__c</fullName>
    <formula>( End_Date__c - Start_Date__c) * 5.71</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Covered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>