CloudConsultingSalesforce/force-app/main/default/objects/Project_Staff__c/fields/Project_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Project_Line_Item__c</fullName>
    <label>Project Line Item</label>
    <referenceTo>Project_Line_Item__c</referenceTo>
    <relationshipLabel>Projects Staff</relationshipLabel>
    <relationshipName>Projects_Staff</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>