CloudConsultingSalesforce/force-app/main/default/objects/Project_Staff__c/validationRules/Allocate_hours_within_project_dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Allocate_hours_within_project_dates</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c  &lt;   Project_Line_Item__r.Project__r.Start_Date__c   ||  End_Date__c  &gt;   Project_Line_Item__r.Project__r.End_Date__c</errorConditionFormula>
    <errorMessage>Staff dates are out of range. Check project dates.</errorMessage>
</ValidationRule>