CloudConsultingSalesforce/force-app/main/default/objects/Project_Staff__c/validationRules/RolesValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>RolesValidation</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Project_Line_Item__r.Role__c) &lt;&gt; User__r.UserRole.Name</errorConditionFormula>
    <errorMessage>The role of the user does not match the requirement</errorMessage>
</ValidationRule>